argocd-managed/ingress/Ingress.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: serverinfo.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: serverinfo
               port:
                 number: 80
   - host: argocd.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               namespace: argocd
               name: argocd-server
               port:
                 number: 443
